fix(ui): DOMA-4642 Card title overflow and tag bottom padding was changed

--- a/packages/ui/src/components/Card/style.less
+++ b/packages/ui/src/components/Card/style.less
@@ -13,6 +13,7 @@
 
   &-head-title {
     padding: 0;
+    overflow: visible;
   }
 
   &-hoverable {
